@@ -1,5 +1,6 @@
 package com.example.infinityweb_be.service.order;
 
+import com.example.infinityweb_be.common.NotFoundException;
 import com.example.infinityweb_be.domain.Order;
 import com.example.infinityweb_be.domain.OrderDetail;
 import com.example.infinityweb_be.domain.User;
@@ -10,9 +11,13 @@ import com.example.infinityweb_be.domain.dto.order.OrderResponse;
 import com.example.infinityweb_be.domain.dto.order.OrderStatus;
 import com.example.infinityweb_be.repository.CourseRepository;
 import com.example.infinityweb_be.repository.UserRepository;
+
 import com.example.infinityweb_be.repository.order.OrderRepository;
+
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.crossstore.ChangeSetPersister;
+import org.springframework.security.access.AccessDeniedException;
 import org.springframework.stereotype.Service;
 
 import java.math.BigDecimal;
@@ -20,6 +25,7 @@ import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -30,6 +36,7 @@ public class OrderService {
     private final CourseRepository courseRepository;
 
 
+//Tạo đơn hàng mới
     public OrderResponse createOrder(CreateOrderRequest req) {
 
         Course course = courseRepository.findById(req.getCourseId())
@@ -37,7 +44,6 @@ public class OrderService {
 
         User user = userRepository.findById(req.getUserId())
                 .orElseThrow(() -> new RuntimeException("User not found"));
-
 
         Order order = Order.builder()
                 .course(course)
@@ -50,26 +56,16 @@ public class OrderService {
                 .totalAmount(course.getPrice())
                 .build();
 
-
-
-
         OrderDetail detail = OrderDetail.builder()
                 .order(order)
-                .serviceName("Unlock khóa học 1 năm")
-                .serviceDesc("Mở khóa tất cả nội dung trong 12 tháng")
-                .price(BigDecimal.valueOf(1000000))
+                .serviceName("Mua khóa học: " + course.getName())
+                .serviceDesc("Truy cập toàn bộ nội dung khóa học \"" + course.getName() + "\" trong 12 tháng.")
+                .price(course.getPrice())
                 .build();
 
         order.setOrderDetails(List.of(detail));
         Order saved = orderRepository.save(order);
-        return new OrderResponse(
-                saved.getOrderCode(),
-                saved.getStatus().name(),
-                saved.getTotalAmount(),
-                saved.getPaymentMethod().name(), // ✅ sửa tại đây
-                saved.getOrderDate(),
-                List.of(new OrderDetailDTO("Unlock khóa học 1 năm", "Mở khóa tất cả nội dung trong 12 tháng", BigDecimal.valueOf(1000000)))
-        );
+        return mapToResponse(saved);
 
     }
 
@@ -80,7 +76,7 @@ public class OrderService {
 //        orderRepository.save(order);
 //    }
 
-
+//Cập nhật trạng thái đơn hàng
     public void updateOrderStatus(String orderCode, String status) {
         Order order = orderRepository.findByOrderCode(orderCode)
                 .orElseThrow(() -> new RuntimeException("Order not found"));
@@ -89,30 +85,40 @@ public class OrderService {
         orderRepository.save(order);
     }
 
-
+  //  Tạo mã đơn hàng
     private String generateOrderCode() {
-        return "ORD-" + UUID.randomUUID().toString().substring(0, 8).toUpperCase();
+        return "DH" + String.valueOf(System.currentTimeMillis()).substring(5);
     }
 
+
+
+   // Lấy thông tin đơn hàng theo mã
     public OrderResponse getOrderByCode(String orderCode) {
         Order order = orderRepository.findByOrderCode(orderCode)
                 .orElseThrow(() -> new RuntimeException("Order not found"));
 
+        return mapToResponse(order);
+    }
+
+//Mapping từ Entity → DTO
+    private OrderResponse mapToResponse(Order order) {
         List<OrderDetailDTO> details = order.getOrderDetails().stream()
                 .map(d -> new OrderDetailDTO(d.getServiceName(), d.getServiceDesc(), d.getPrice()))
-                .toList();
+                .collect(Collectors.toList());
 
         return new OrderResponse(
                 order.getOrderCode(),
                 order.getStatus().name(),
                 order.getTotalAmount(),
-                order.getPaymentMethod().name(), // ✅ sửa tại đây
+                order.getPaymentMethod().name(),
                 order.getOrderDate(),
-                details
+                order.getCourse().getName(),
+                details,
+                order.getUser().getUsername() // ← thêm
         );
-
     }
 
+//Tìm đơn hàng theo mã (trả Optional)
     public Optional<Order> findByOrderCode(String orderCode) {
         return orderRepository.findByOrderCode(orderCode);
     }
@@ -121,37 +127,79 @@ public class OrderService {
 
 
 
-    // check hoc vien
+//Kiểm tra người dùng đã mua khóa học chưa
     public boolean hasUserPurchasedCourse(Integer userId, Integer courseId) {
         return orderRepository.hasValidOrderByUserId(userId, courseId);
     }
 
 
+// Lấy tất cả đơn hàng theo người dùng
     public List<OrderResponse> getOrdersByUserId(Integer userId) {
-        List<Order> orders = orderRepository.findAllByUserId(userId);
-        return orders.stream().map(this::mapToResponse).toList();
+        List<Order> orders = orderRepository.findByUserId(userId);
+        return orders.stream().map(this::mapToResponse).collect(Collectors.toList());
     }
 
+
+//Lọc đơn hàng theo người dùng và trạng thái
+    public List<OrderResponse> getOrdersByUserIdAndStatus(Integer userId, String status) {
+        List<Order> orders;
+        if (status != null) {
+            orders = orderRepository.findByUserIdAndStatus(userId, OrderStatus.valueOf(status.toUpperCase()));
+        } else {
+            orders = orderRepository.findByUserId(userId);
+        }
+
+        return orders.stream().map(this::mapToResponse).collect(Collectors.toList());
+    }
+
+
+//Lấy tất cả đơn hàng
     public List<OrderResponse> getAllOrders() {
         List<Order> orders = orderRepository.findAll(); // hoặc phân trang
         return orders.stream().map(this::mapToResponse).toList();
     }
 
-    private OrderResponse mapToResponse(Order order) {
-        List<OrderDetailDTO> details = order.getOrderDetails().stream()
-                .map(d -> new OrderDetailDTO(d.getServiceName(), d.getServiceDesc(), d.getPrice()))
-                .toList();
 
-        return new OrderResponse(
-                order.getOrderCode(),
-                order.getStatus().name(),
-                order.getTotalAmount(),
-                order.getPaymentMethod().name(),
-                order.getOrderDate(),
-                details
-        );
+
+// Hủy đơn hàng
+    public void cancelOrder(String orderCode, Integer userId) {
+        Order order = orderRepository.findByOrderCode(orderCode)
+                .orElseThrow(() -> new NotFoundException("Không tìm thấy đơn"));
+
+        if (!order.getUser().getId().equals(userId)) {
+            throw new AccessDeniedException("Bạn không có quyền hủy đơn này");
+        }
+
+        if (order.getStatus() != OrderStatus.PENDING) {
+            throw new IllegalStateException("Chỉ có thể hủy đơn ở trạng thái PENDING");
+        }
+
+        order.setStatus(OrderStatus.CANCELLED);
+        orderRepository.save(order);
     }
 
+//Duyệt đơn hàng
+    public void approveOrder(String orderCode) {
+        Order order = orderRepository.findByOrderCode(orderCode)
+                .orElseThrow(() -> new NotFoundException("Không tìm thấy đơn"));
+
+        if (order.getStatus() != OrderStatus.PENDING) {
+            throw new IllegalStateException("Chỉ duyệt đơn ở trạng thái PENDING");
+        }
+
+        order.setStatus(OrderStatus.PAID);
+        orderRepository.save(order);
+
+    }
+
+
+
+// Xoá đơn hàng
+    public void deleteOrderByCode(String orderCode) {
+        Order order = orderRepository.findByOrderCode(orderCode)
+                .orElseThrow(() -> new RuntimeException("Order not found"));
+        orderRepository.delete(order);
+    }
 
 
 
